[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "christmas"
version = "0.1.0"
description = "A demo project showcasing Python src layout and absolute imports"
requires-python = ">=3.9"
dependencies = []

# Development dependencies (install with: pip install -e .[dev])
[project.optional-dependencies]
dev = ["pytest", "isort", "build"]

# Entry points for CLI commands
[project.scripts]
christmas = "christmas.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/christmas"]

# isort configuration for import sorting
[tool.isort]
profile = "black"
known_first_party = ["christmas"]

# pytest configuration
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
